test/sh/error/func/var_def_check_func.sk
external f()

x := f(1)
